[Core] Fix the resize mode labels in the image sizes module

--- a/core-bundle/contao/languages/en/tl_image_size.xlf
+++ b/core-bundle/contao/languages/en/tl_image_size.xlf
@@ -56,6 +56,24 @@
       <trans-unit id="tl_image_size.expert_legend">
         <source>Expert settings</source>
       </trans-unit>
+      <trans-unit id="tl_image_size.proportional.0">
+        <source>Proportional</source>
+      </trans-unit>
+      <trans-unit id="tl_image_size.proportional.1">
+        <source>The longer side of the image is adjusted to the given dimensions and the image is resized proportionally.</source>
+      </trans-unit>
+      <trans-unit id="tl_image_size.box.0">
+        <source>Fit the box</source>
+      </trans-unit>
+      <trans-unit id="tl_image_size.box.1">
+        <source>The shorter side of the image is adjusted to the given dimensions and the image is resized proportionally.</source>
+      </trans-unit>
+      <trans-unit id="tl_image_size.crop.0">
+        <source>Crop</source>
+      </trans-unit>
+      <trans-unit id="tl_image_size.crop.1">
+        <source>The image will be resized to the given dimensions. If necessary, it will be cropped.</source>
+      </trans-unit>
       <trans-unit id="tl_image_size.new.0">
         <source>New image size</source>
       </trans-unit>
