--- a/core-bundle/src/Resources/contao/languages/en/tl_templates.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_templates.xlf
@@ -44,6 +44,18 @@
       <trans-unit id="tl_templates.pasteinto.1">
         <source>Paste into this folder</source>
       </trans-unit>
+      <trans-unit id="tl_templates.diff.0">
+        <source>View differences to another template</source>
+      </trans-unit>
+      <trans-unit id="tl_templates.diff.1">
+        <source>View differences of "%s" to another template.</source>
+      </trans-unit>
+      <trans-unit id="tl_templates.overridesAnotherTpl">
+        <source>This template ("%s") overrides a template from an extension or the core itself. The path to the original template is "%s".</source>
+      </trans-unit>
+      <trans-unit id="tl_templates.standaloneTpl">
+        <source>This template ("%s") is a standalone template and does not override a template from an extension or the core itself.</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
