--- a/core-bundle/src/Resources/contao/languages/ru/tl_form.xlf
+++ b/core-bundle/src/Resources/contao/languages/ru/tl_form.xlf
@@ -135,7 +135,7 @@
       </trans-unit>
       <trans-unit id="tl_form.attributes.1">
         <source>Here you can set an ID and one or more classes.</source>
-        <target>Вы можете ввести CSS ID (ID атрибута) и один или несколько CSS классов (атрибутов класса).</target>
+        <target>Вы можете ввести ID одного или нескольких классов.</target>
       </trans-unit>
       <trans-unit id="tl_form.formID.0">
         <source>Form ID</source>
