[Core] Add the missing stuff

--- a/core-bundle/contao/languages/en/tl_settings.xlf
+++ b/core-bundle/contao/languages/en/tl_settings.xlf
@@ -132,7 +132,7 @@
         <source>Rewrite URLs</source>
       </trans-unit>
       <trans-unit id="tl_settings.rewriteURL.1">
-        <source>Make Contao generate static URLs without the index.php fragment. This feature requires "mod_rewrite", renaming the ".htaccess.default" file to ".htaccess" and adjusting the RewriteBase as necessary.</source>
+        <source>Make Contao generate static URLs without the script name. This feature requires "mod_rewrite", renaming the ".htaccess.default" file to ".htaccess" and adjusting the RewriteBase as necessary.</source>
       </trans-unit>
       <trans-unit id="tl_settings.addLanguageToUrl.0">
         <source>Add the language to the URL</source>
