[Core] Fix two more FIXMEs

--- a/core-bundle/contao/languages/en/tl_install.xlf
+++ b/core-bundle/contao/languages/en/tl_install.xlf
@@ -81,7 +81,7 @@
         <source>Your server does not support file access via PHP; most likely PHP runs as Apache module under a different user. Please contact your server administrator and ask him to fix the problem. &lt;strong&gt;Do not attempt to fix this yourself&lt;/strong&gt; by making files and folders writable for everyone!</source>
       </trans-unit>
       <trans-unit id="tl_install.lcfNotWritable">
-        <source>The local configuration file could not be written!</source>
+        <source>PHP is not allowed to write files!</source>
       </trans-unit>
       <trans-unit id="tl_install.accept">
         <source>Accept license</source>
