--- a/core-bundle/src/Resources/contao/languages/zh/default.xlf
+++ b/core-bundle/src/Resources/contao/languages/zh/default.xlf
@@ -1147,9 +1147,11 @@
       </trans-unit>
       <trans-unit id="MSC.lastLogin.0">
         <source>Previous login</source>
+        <target>上一次登录</target>
       </trans-unit>
       <trans-unit id="MSC.lastLogin.1">
         <source>Previous login: %s</source>
+        <target>上一次登录: %s</target>
       </trans-unit>
       <trans-unit id="MSC.currentLogin.0">
         <source>Last login</source>
