[Core] Add a front end module to change the password (see #7418).

--- a/core-bundle/src/Resources/contao/languages/en/modules.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/modules.xlf
@@ -218,6 +218,12 @@
       <trans-unit id="FMD.registration.1">
         <source>Generates a user registration form</source>
       </trans-unit>
+      <trans-unit id="FMD.changePassword.0">
+        <source>Change password</source>
+      </trans-unit>
+      <trans-unit id="FMD.changePassword.1">
+        <source>Generates a form to change the password</source>
+      </trans-unit>
       <trans-unit id="FMD.lostPassword.0">
         <source>Lost password</source>
       </trans-unit>
