[Core] Show the upload limits in the file manager (see #7389).

--- a/core-bundle/src/Resources/contao/languages/en/tl_files.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_files.xlf
@@ -51,7 +51,7 @@
         <source>File upload</source>
       </trans-unit>
       <trans-unit id="tl_files.fileupload.1">
-        <source>Browse your local computer and select the files you want to upload to the server.</source>
+        <source>Select the files you want to upload to the server (maximum %s and %s pixel).</source>
       </trans-unit>
       <trans-unit id="tl_files.editor.0">
         <source>Source editor</source>
