[Core] Remove the deprecated stuff from the install tool

--- a/core-bundle/src/Resources/contao/languages/en/tl_install.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_install.xlf
@@ -24,7 +24,7 @@
         <source>Install tool password</source>
       </trans-unit>
       <trans-unit id="tl_install.changePass.1">
-        <source>To additionally secure the Contao install tool, you can either rename or completely remove the &lt;strong&gt;contao/install.php&lt;/strong&gt; file.</source>
+        <source>To additionally secure the Contao install tool, you can remove the &lt;strong&gt;contao_backend_install&lt;/strong&gt; route.</source>
       </trans-unit>
       <trans-unit id="tl_install.encryption.0">
         <source>Generate an encryption key</source>
@@ -33,10 +33,10 @@
         <source>This key is used to store encrypted data. Please note that encrypted data can only be decrypted with this key! Therefore note it down and do not change it if there is encrypted data already. Leave empty to generate a random key.</source>
       </trans-unit>
       <trans-unit id="tl_install.database.0">
-        <source>Check database connection</source>
+        <source>Check the database connection</source>
       </trans-unit>
       <trans-unit id="tl_install.database.1">
-        <source>Please enter your database connection parameters.</source>
+        <source>The database connection is configured in the &lt;em&gt;app/config/parameters.yml&lt;/em&gt; file.</source>
       </trans-unit>
       <trans-unit id="tl_install.collation.0">
         <source>Collation</source>
@@ -61,12 +61,6 @@
       </trans-unit>
       <trans-unit id="tl_install.admin.1">
         <source>If you have imported the example website, the admin's username is &lt;strong&gt;k.jones&lt;/strong&gt; and the password is &lt;strong&gt;kevinjones&lt;/strong&gt;. See the example website (front end) for more information.</source>
-      </trans-unit>
-      <trans-unit id="tl_install.repository.0">
-        <source>Extension repository</source>
-      </trans-unit>
-      <trans-unit id="tl_install.repository.1">
-        <source>We are currently beta testing a new version of the extension repository, which uses Composer to manage packages. Please install the Composer client to participate in the beta test.</source>
       </trans-unit>
       <trans-unit id="tl_install.completed.0">
         <source>Congratulations!</source>
@@ -113,41 +107,14 @@
       <trans-unit id="tl_install.keySave">
         <source>Generate or save key</source>
       </trans-unit>
+      <trans-unit id="tl_install.dbCheck">
+        <source>Database connection</source>
+      </trans-unit>
       <trans-unit id="tl_install.dbConfirm">
         <source>Database connection established.</source>
       </trans-unit>
       <trans-unit id="tl_install.dbError">
         <source>Not connected to a database!</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbDriver">
-        <source>Driver</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbHost">
-        <source>Host</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbUsername">
-        <source>Username</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbDatabase">
-        <source>Database</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbPersistent">
-        <source>Persistent connection</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbCharset">
-        <source>Character set</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbCollation">
-        <source>Collation</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbPort">
-        <source>Port number</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbSocket">
-        <source>Socket file</source>
-      </trans-unit>
-      <trans-unit id="tl_install.dbSave">
-        <source>Save database settings</source>
       </trans-unit>
       <trans-unit id="tl_install.collationInfo">
         <source>Changing the collation will affect all tables with a &lt;em&gt;tl_&lt;/em&gt; prefix.</source>
@@ -208,15 +175,6 @@
       </trans-unit>
       <trans-unit id="tl_install.adminSave">
         <source>Create admin account</source>
-      </trans-unit>
-      <trans-unit id="tl_install.repositoryDefault">
-        <source>You are using the default extension repository.</source>
-      </trans-unit>
-      <trans-unit id="tl_install.repositoryComposer">
-        <source>You are using the Composer based extension repository.</source>
-      </trans-unit>
-      <trans-unit id="tl_install.repositoryInstall">
-        <source>Install the Composer client</source>
       </trans-unit>
       <trans-unit id="tl_install.installConfirm">
         <source>You have successfully installed Contao.</source>
