[Core] Move the remaining resources from system/cache to app/cache.

--- a/core-bundle/src/Resources/contao/languages/en/tl_maintenance.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_maintenance.xlf
@@ -129,7 +129,7 @@
         <source>Purge the internal cache</source>
       </trans-unit>
       <trans-unit id="tl_maintenance_jobs.internal.1">
-        <source>Removes the cached versions of the DCA and language files. You can permanently disable the internal cache in the back end settings.</source>
+        <source>Removes the cached versions of the config, DCA and language files.</source>
       </trans-unit>
       <trans-unit id="tl_maintenance_jobs.temp.0">
         <source>Purge the temp folder</source>
