--- a/core-bundle/src/Resources/contao/languages/en/exception.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/exception.xlf
@@ -116,6 +116,9 @@
       <trans-unit id="XPT.maintenance">
         <source>The website is currently down for maintenance. Please come back later.</source>
       </trans-unit>
+      <trans-unit id="XPT.insecure">
+        <source>Insecure document root</source>
+      </trans-unit>
       <trans-unit id="XPT.insecureRoot">
         <source>Your installation is not secure, because non-public resources are publicy available via HTTP.</source>
       </trans-unit>
