--- a/core-bundle/src/Resources/contao/languages/en/tl_content.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_content.xlf
@@ -45,7 +45,7 @@
         <source>Here you can enter the image title (&lt;em&gt;title&lt;/em&gt; attribute).</source>
       </trans-unit>
       <trans-unit id="tl_content.size.0">
-        <source>Image width and height</source>
+        <source>Image size</source>
       </trans-unit>
       <trans-unit id="tl_content.size.1">
         <source>Here you can set the image dimensions and the resize mode.</source>
