--- a/core-bundle/src/Resources/contao/languages/en/tl_form_field.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_form_field.xlf
@@ -18,7 +18,7 @@
         <source>Fieldset</source>
       </trans-unit>
       <trans-unit id="FFL.fieldset.1">
-        <source>A container for form fields with an optional legend (only available for tableless forms).</source>
+        <source>A container for form fields with an optional legend.</source>
       </trans-unit>
       <trans-unit id="FFL.text.0">
         <source>Text field</source>
