--- a/core-bundle/src/Resources/contao/languages/en/tl_layout.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_layout.xlf
@@ -152,6 +152,12 @@
       <trans-unit id="tl_layout.form.css.1">
         <source>Adds basic form elements and buttons formatting.</source>
       </trans-unit>
+      <trans-unit id="tl_layout.icons.css.0">
+        <source>Basic icons</source>
+      </trans-unit>
+      <trans-unit id="tl_layout.icons.css.1">
+        <source>Adds basic mime icons for downloads and enclosures.</source>
+      </trans-unit>
       <trans-unit id="tl_layout.external.0">
         <source>External style sheets</source>
       </trans-unit>
