--- a/core-bundle/src/Resources/contao/languages/en/default.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/default.xlf
@@ -83,6 +83,9 @@
       <trans-unit id="ERR.noSpace">
         <source>Field "%s" must not contain any whitespace characters!</source>
       </trans-unit>
+      <trans-unit id="ERR.filename">
+        <source>The file name contains invalid characters or is longer than 255 characters!</source>
+      </trans-unit>
       <trans-unit id="ERR.filesize">
         <source>The maximum size for file uploads is %s (Contao or php.ini settings)!</source>
       </trans-unit>
