[Core] Remove a left-over asterisk from the countries list.

--- a/core-bundle/src/Resources/contao/languages/en/countries.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/countries.xlf
@@ -198,7 +198,7 @@
         <source>Egypt</source>
       </trans-unit>
       <trans-unit id="CNT.eh">
-        <source>Western Sahara*</source>
+        <source>Western Sahara</source>
       </trans-unit>
       <trans-unit id="CNT.er">
         <source>Eritrea</source>
