[Core] Adjust the error message for unique fields (see #7719).

--- a/core-bundle/src/Resources/contao/languages/en/default.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/default.xlf
@@ -6,7 +6,7 @@
         <source>An error occurred!</source>
       </trans-unit>
       <trans-unit id="ERR.unique">
-        <source>Duplicate entry in field "%s"!</source>
+        <source>This entry already exists!</source>
       </trans-unit>
       <trans-unit id="ERR.mandatory">
         <source>Field "%s" must not be empty!</source>
