--- a/core-bundle/src/Resources/contao/languages/en/tl_user_group.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/tl_user_group.xlf
@@ -44,6 +44,9 @@
       <trans-unit id="tl_user_group.filemounts_legend">
         <source>Filemounts</source>
       </trans-unit>
+      <trans-unit id="tl_user_group.imagesizes_legend">
+        <source>Image sizes</source>
+      </trans-unit>
       <trans-unit id="tl_user_group.forms_legend">
         <source>Form permissions</source>
       </trans-unit>
