--- a/core-bundle/src/Resources/contao/languages/en/explain.xlf
+++ b/core-bundle/src/Resources/contao/languages/en/explain.xlf
@@ -12,13 +12,13 @@
         <source>Insert tags</source>
       </trans-unit>
       <trans-unit id="XPL.insertTags.1.1">
-        <source>For more information on insert tags please visit &lt;a href="https://contao.org/manual/managing-content.html#insert-tags" title="Contao online documentation" target="_blank"&gt;https://contao.org/manual/managing-content.html#insert-tags&lt;/a&gt;.</source>
+        <source>For more information on insert tags please visit &lt;a href="https://docs.contao.org/books/manual/current/en/04-managing-content/insert-tags.html" title="Contao online documentation" target="_blank"&gt;https://docs.contao.org/books/manual/current/en/04-managing-content/insert-tags.html&lt;/a&gt;.</source>
       </trans-unit>
       <trans-unit id="XPL.insertTags.2.0">
         <source>Code Editor</source>
       </trans-unit>
       <trans-unit id="XPL.insertTags.2.1">
-        <source>For more information about ACE please visit &lt;a href="http://ace.ajax.org" title="ACE (Ajax.org Cloud9 Editor)" target="_blank"&gt;http://ace.ajax.org&lt;/a&gt;.</source>
+        <source>For more information about ACE please visit &lt;a href="http://ace.c9.io" title="Ace - The High Performance Code Editor for the Web" target="_blank"&gt;http://ace.c9.io&lt;/a&gt;.</source>
       </trans-unit>
       <trans-unit id="XPL.dateFormat.0.0">
         <source>colspan</source>
